<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/immersion_status"
    android:orientation="vertical" >

    <include layout="@layout/include_activity_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_app_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.wtjr.lqg.widget.BandBankEdit
            android:id="@+id/bbe_card_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d20"
            app:edtRight_hint="请输入您的银行卡号"
            app:maxLength="27"
            app:tvLeft="@string/bbank_number" />

        <View style="@style/line" />

        <com.wtjr.lqg.widget.BandBankEdit
            android:id="@+id/bbe_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:edtRight_hint="请输入您的开户姓名"
            app:maxLength="30"
            app:tvLeft="@string/bbank_open_account_name" />

        <View style="@style/line" />

        <com.wtjr.lqg.widget.BandBankEdit
            android:id="@+id/bbe_cert_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:edtRight_hint="请输入您的身份证号码"
            app:tvLeft="@string/bbank_id_card" />

        <View style="@style/line" />

        <!-- 预留手机号码 -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <com.wtjr.lqg.widget.BandBankEdit
                android:id="@+id/edt_local_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/d5"
                android:layout_toLeftOf="@+id/btn_local_phone"
                app:edtRight_hint="请输入手机号"
                app:maxLength="11"
                app:tvLeft="@string/bbank_obligate_phone" />

            <Button
                android:id="@+id/btn_local_phone"
                style="@style/button_small"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/d10"
                android:text="本机号码" />
        </RelativeLayout>

        <View style="@style/line" />

        <!-- 选择省市 -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/d50">

            <com.wtjr.lqg.widget.BandBankEdit
                android:id="@+id/bbe_select_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:edtRight_hint="请选择开户省市"
                app:tvLeft="@string/bbank_open_account_address" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@color/white"
                android:paddingLeft="@dimen/d20"
                android:paddingRight="@dimen/d20"
                android:src="@drawable/naving_next_nor" />

            <RelativeLayout
                android:id="@+id/rl_select_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></RelativeLayout>
        </RelativeLayout>

        <View style="@style/line" />

        <com.wtjr.lqg.widget.BandBankEdit
            android:id="@+id/bb_open_account_branch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d50"
            app:edtRight_hint="请输入您的开户支行"
            app:tvLeft="@string/bbank_open_account_bank" />

        <TextView
            android:id="@+id/tbank_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d15"
            android:layout_marginRight="@dimen/d15"
            android:layout_marginTop="@dimen/d15"
            android:text="@string/bank_hint_message"
            android:textColor="@color/FC_999999"
            android:textSize="@dimen/s13" />

        <Button
            android:id="@+id/btn_bbank_immediately"
            style="@style/buttonStyle_2"
            android:layout_marginTop="@dimen/d15"
            android:text="@string/bbank_immediately" />
    </LinearLayout>

</LinearLayout>