<?xml version="1.0" encoding="utf-8"?><!-- 设置页面布局 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/immersion_status">

    <!-- 标题 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/include_activity_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f5f5f5"
            android:orientation="vertical">

            <com.wtjr.lqg.widget.UsuallyLayoutItem
                android:id="@+id/uli_login_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d10"
                app:com_textTvContentL="@string/set_login_phone"
                app:com_textTvContentLMarginL="@dimen/d15"
                app:com_textTvContentR="0.00"
                app:com_textTvSizeL="@dimen/s15"
                app:com_textTvSizeR="@dimen/s15" />

            <View style="@style/line" />

            <com.wtjr.lqg.widget.UsuallyLayoutItem
                android:id="@+id/uli_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:com_textTvContentL="@string/set_login_password"
                app:com_textTvContentLMarginL="@dimen/d15"
                app:com_textTvSizeL="@dimen/d15" />

            <View style="@style/line" />

            <com.wtjr.lqg.widget.UsuallyLayoutItem
                android:id="@+id/uli_pay_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:com_textTvContentL="@string/set_pay_set"
                app:com_textTvContentLMarginL="@dimen/d15"
                app:com_textTvSizeL="@dimen/d15" />

            <View style="@style/line" />

            <com.wtjr.lqg.widget.UsuallyLayoutItem
                android:id="@+id/uli_notify_set"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:com_textTvContentL="@string/set_notify"
                app:com_textTvContentLMarginL="@dimen/d15"
                app:com_textTvSizeL="@dimen/d15" />

            <View
                style="@style/line"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/d50"
                android:layout_marginTop="@dimen/d10"
                android:background="@color/white">

                <com.wtjr.lqg.widget.toggle.ToggleButton

                    android:id="@+id/tb_gesture_password"
                    android:layout_width="@dimen/d48"
                    android:layout_height="@dimen/d26"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/d20" />

                <TextView
                    style="@style/TextNormalStyleL"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/d15"
                    android:text="@string/set_gestures_password" />

                <View
                    style="@style/line"
                    android:layout_alignParentBottom="true" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_gestures_track"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d50"
                android:background="@color/white">

                <com.wtjr.lqg.widget.toggle.ToggleButton
                    android:id="@+id/tb_gestures_track"
                    android:layout_width="@dimen/d48"
                    android:layout_height="@dimen/d26"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/d20" />

                <TextView
                    style="@style/TextNormalStyleL"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/d15"
                    android:text="@string/set_gestures_track" />

                <View
                    style="@style/line"
                    android:layout_alignParentBottom="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/d50"
                android:layout_marginTop="@dimen/d10"
                android:background="@color/white">

                <com.wtjr.lqg.widget.toggle.ToggleButton
                    android:id="@+id/tb_voice"
                    android:layout_width="@dimen/d48"
                    android:layout_height="@dimen/d26"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/d20" />

                <TextView
                    style="@style/TextNormalStyleL"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/d15"
                    android:text="@string/set_voice" />

                <View
                    style="@style/line"
                    android:layout_alignParentBottom="true" />
            </RelativeLayout>

            <com.wtjr.lqg.widget.UsuallyLayoutItem
                android:id="@+id/uli_version_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d10"
                app:com_textTvContentL="@string/set_version_update"
                app:com_textTvContentLMarginL="@dimen/d15"
                app:com_textTvContentR="当前版本"
                app:com_textTvSizeL="@dimen/d15"
                app:com_textTvSizeR="@dimen/s15" />

            <View style="@style/line" />

            <com.wtjr.lqg.widget.UsuallyLayoutItem
                android:id="@+id/uli_download"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:com_textTvContentL="@string/set_download"
                app:com_textTvContentLMarginL="@dimen/d15"
                app:com_textTvSizeL="@dimen/d15" />

            <View style="@style/line" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d50"
        android:background="@drawable/layout_item_state"
        android:text="@string/set_exit"
        android:textColor="@color/FC_666666"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/s16" />
</RelativeLayout>