<?xml version="1.0" encoding="utf-8"?>
<!-- 设置支付密码页面页面布局 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/immersion_status"
    android:orientation="vertical" >

    <!-- 标题 -->

    <include layout="@layout/include_activity_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_app_bg"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/d50"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/d15"
            android:textColor="@color/FC_999999"
            android:text="@string/pas_prompt" />

        <com.wtjr.lqg.widget.UsuallyLayoutItem
            android:id="@+id/uli_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:com_ImageContentrScrL="@null"
            app:com_ImageLeftMarginL="@dimen/d1"
            app:com_textTvContentLMarginL="@dimen/d12"
            app:com_textTvContentL="@string/pas_login_password" />

        <View style="@style/line" />

        <com.wtjr.lqg.widget.UsuallyLayoutItem
            android:id="@+id/uli_phone_sms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:com_ImageContentrScrL="@null"
            app:com_ImageLeftMarginL="@dimen/d1"
            app:com_textTvContentLMarginL="@dimen/d12"
            app:com_textTvContentL="@string/pas_phone_sms" />
    </LinearLayout>

</LinearLayout>